kube-znn/overlay/cloud/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-znn
spec:
  template:
    spec:
      nodeSelector:
        localhost.k8s.io/layer: "web"
