kube-znn/overlay/cloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-kube-znn
spec:
  rules:
  - host: "nginx-ingress.default.svc"
